# BayesianOptimization

./: CMakeLists.txt  main.cpp
BayesOpt/: AcquisitionStrategy  BayesianOptimization  GaussianProcess  Kernel
